# Chatalia

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  config.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  settings.rs
src/components/: ChatMessage.tsx  ChatMessageEdit.tsx  ChatSettingsModal.tsx  ConfirmModal.tsx  EditableTitle.tsx  EmptyState.tsx  MessageActions.tsx  SettingsModal.tsx  SetupPage.tsx  Sidebar.tsx  ThemeSwitcher.tsx  WelcomePage.tsx
src/types/: chat.ts
