[package]
name = "chatalia"
version = "0.1.0"
description = "A Tauri app for AI chat"
authors = ["MegalithOfficial"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chatalia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
aes-gcm = "0.10.1"
sha2 = "0.10.6"
rand = "0.8.5"
base64 = "0.21.0"
home = "0.5.5"
thiserror = "1.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-os = "2.2.1"
tauri-plugin-fs = "2.2.0"
